--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="CSS/reset/reset.css">
     <link rel="stylesheet" href="CSS/TopCSS/index.css">
-    <title>TOP｜Webデザイン科わかる？｜日本電子専門学校</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js" integrity="sha512-3gJwYpMe3QewGELv8k/BX9vcqhryRdzRMxVfq6ngyWXwo03GFEzjsUm8Q7RZcHPHksttq7/GFoxjCVUjkjvPdw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="JAVASCRIPT/index.js" defer></script>
+    <title>TOP｜心構えができる！｜日本電子専門学校</title>
 </head>
 <body>
 
@@ -16,7 +18,7 @@
 
             <div class="ham_btn">
                 <div class="btn_line line01"></div>
-                <div class="btn_line line02"></div>
+                <!-- <div class="btn_line line02"></div> -->
             </div>
 
             <div class="menu_body">
