--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <div class="menu_logo"><img src="img/学科LOGO-03.svg" alt="Webデザイン科のロゴ"></div>
 
                 <ul class="menu_link">
-                    <li><a href="#">Webデザイン科紹介</a></li>
+                    <li><a href="content_intro.html">Webデザイン科紹介</a></li>
                     <li><a href="#">一年授業</a></li>
                     <li><a href="#">二年授業</a></li>
                     <li><a href="#">心構え診断</a></li>
@@ -63,22 +63,26 @@
                 ここから紹介します。
             </p>
 
-            <a href="#" class="content_link intro_link">Webデザイン科とは</a>
+            <a href="content_intro.html" class="content_link intro_link">Webデザイン科とは</a>
         </section>
 
         <section class="intro Web_learning">
+
             <h2 class="Web_title title_02">Webデザイン科の学び</h2>
             <span class="block"></span>
             <p>Webデザイン科の基礎は全て<br>
                 一年に身に付ける。
             </p>
             <a href="#" class="content_link first_year_link">一年授業</a>
+            <div class="one"><img src="img/number01.svg" alt="数字１"></div>
 
             <p>さらに難しい二年生の授業で<br>
                 就職の準備を完成させる。
             </p>
 
             <a href="#" class="content_link sec_year_link">二年授業</a>
+            <div class="two"><img src="img/number02.svg" alt="数字１"></div>
+
         </section>
         
         <section class="intro_test test_all">
@@ -100,7 +104,7 @@
 
         <div class="footer_link">
             <div class="footer_link_a link01">
-                <a href="#"><p>▶︎Webデザイン科とは</p></a>
+                <a href="content_intro.html"><p>▶︎Webデザイン科とは</p></a>
                 <a href="#"><p>▶︎一年授業</p></a>
                 <a href="https://www.jec.ac.jp/inquiry/"><p>▶︎お問い合わせ</p></a>
             </div>
