20230707 intro scss adjust

--- a/content_intro.html
+++ b/content_intro.html
@@ -12,11 +12,10 @@
     <header>
         <a href="index.html" class="logo"><img src="img/学科LOGO-03.svg" alt="Webデザイン科のロゴ"></a>
 
-        <!-- <div class="ham_menu">
+        <div class="ham_menu">
 
             <div class="ham_btn">
                 <div class="btn_line line01"></div>
-                <div class="btn_line line02"></div>
             </div>
 
             <div class="menu_body">
@@ -36,7 +35,7 @@
                 </ul>
             </div>
 
-        </div> -->
+        </div>
 
     </header>
 
