--- a/content_intro.html
+++ b/content_intro.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="CSS/reset/reset.css">
     <link rel="stylesheet" href="CSS/IntroCSS/intro.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js" integrity="sha512-3gJwYpMe3QewGELv8k/BX9vcqhryRdzRMxVfq6ngyWXwo03GFEzjsUm8Q7RZcHPHksttq7/GFoxjCVUjkjvPdw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="JAVASCRIPT/content_intro.js" defer></script>
     <title>Introduction｜心構えができる！｜日本電子専門学校</title>
 </head>
 <body>
@@ -48,19 +50,19 @@
                 <h2>企業連携で仕事を体験</h2>
                 <p>WebデザイナーやWebディレクターに必要な ｢企画立案｣｢プレゼンテーション｣｢デザイン制作｣
                     ｢サイト構築｣などをトータルに学べる学科。</p>
-                <span class="decoration up_01"></span>
-                <img src="img/学科01.jpg" alt="関根先生は学生を指導している様子">
+                <!-- <span class="decoration up_01"></span> -->
+                <div class="img img01"><img src="img/学科01-fit.jpg" alt="関根先生は学生を指導している様子"></div>
 
-                <h2>大手Web関連企業に内定もらえる</h2>
+                <h2>大手Web関連企業に<br/>内定もらえる</h2>
                 <p>授業では企業がクライアント役となり、要望に応えるWebサイトを制作。</p>
-                <img src="img/学科02.jpg" alt="学生のプレゼン写真">
+                <div class="img img02"><img src="img/学科02-fit.jpg" alt="学生のプレゼン写真"></div>
 
-                <h2>技能五輪国際大会に連続で出場</h2>
+                <h2>技能五輪国際大会に<br/>連続で出場</h2>
                 <p>プロの現場と同様の制作手法を通して実践的な技術を身につけます。
                     また、授業外で取り組むチームプロジェクトに参加することで、
                     より技術力を磨けます。</p>
-                <img src="img/学科03.jpg" alt="学生の受賞の様子">
-                <span class="decoration down_01"></span>
+                <div class="img img03"><img src="img/学科03-fit.jpg" alt="学生の受賞の様子"></div>
+                <!-- <span class="decoration down_01"></span> -->
 
         </section>
 
@@ -85,12 +87,12 @@
 
             <a href="">心構え診断</a>
 
-            <p>あら、やっぱり準備をできてないかな。
+            <p>あら、やっぱり準備をできてないかな。<br/>
                 日本電子専門学校をもっと知っていこうか。</p>
 
             <a href="">日本電子専門学校</a>
 
-            <a href=""><img src="img/上矢印.svg" alt=""></a>
+            <div class="back_top"><img src="img/上矢印.svg" alt=""></div>
 
         </section>
 
