20230708 a lot of UP

--- a/content_intro.html
+++ b/content_intro.html
@@ -25,15 +25,15 @@
                 <div class="menu_logo"><img src="img/学科LOGO-03.svg" alt="Webデザイン科のロゴ"></div>
 
                 <ul class="menu_link">
-                    <li><a href="#">Webデザイン科紹介</a></li>
-                    <li><a href="#">一年授業</a></li>
-                    <li><a href="#">二年授業</a></li>
-                    <li><a href="#">心構え診断</a></li>
+                    <li><a href="content_intro.html">Webデザイン科紹介</a></li>
+                    <li><a href="curricula_first.html">一年授業</a></li>
+                    <li><a href="curricula_second.html">二年授業</a></li>
+                    <li><a href="test.html">心構え診断</a></li>
                 </ul>
     
                 <ul class="menu_btn">
-                    <li><a href="" class="menu_btn01">日本電子専門学校</a></li>
-                    <li><a href="" class="menu_btn02">お問い合わせ</a></li>
+                    <li><a href="https://www.jec.ac.jp/" class="menu_btn01">日本電子専門学校</a></li>
+                    <li><a href="https://www.jec.ac.jp/inquiry/" class="menu_btn02">お問い合わせ</a></li>
                 </ul>
             </div>
 
@@ -50,7 +50,6 @@
                 <h2>企業連携で仕事を体験</h2>
                 <p>WebデザイナーやWebディレクターに必要な ｢企画立案｣｢プレゼンテーション｣｢デザイン制作｣
                     ｢サイト構築｣などをトータルに学べる学科。</p>
-                <!-- <span class="decoration up_01"></span> -->
                 <div class="img img01"><img src="img/学科01-fit.jpg" alt="関根先生は学生を指導している様子"></div>
 
                 <h2>大手Web関連企業に<br/>内定もらえる</h2>
@@ -62,7 +61,6 @@
                     また、授業外で取り組むチームプロジェクトに参加することで、
                     より技術力を磨けます。</p>
                 <div class="img img03"><img src="img/学科03-fit.jpg" alt="学生の受賞の様子"></div>
-                <!-- <span class="decoration down_01"></span> -->
 
         </section>
 
@@ -73,8 +71,8 @@
                 <p>Webデザイン科は何を勉強しているのか？</p>
 
                 <ul>
-                    <li><a href="#">一年授業</a></li>
-                    <li><a href="#">二年授業</a></li>
+                    <li><a href="curricula_first.html">一年授業</a></li>
+                    <li><a href="curricula_second.html">二年授業</a></li>
                 </ul>
 
                 <img src="img/学科LOGO-04.svg" alt="Webデザイン科のロゴ">
@@ -85,14 +83,14 @@
 
             <p>Webデザイン科で学ぶための心構えを試してみよう！</p>
 
-            <a href="">心構え診断</a>
+            <a href="test.html">心構え診断</a>
 
             <p>あら、やっぱり準備をできてないかな。<br/>
                 日本電子専門学校をもっと知っていこうか。</p>
 
-            <a href="">日本電子専門学校</a>
+            <a href="https://www.jec.ac.jp/">日本電子専門学校</a>
 
-            <div class="back_top"><img src="img/上矢印.svg" alt=""></div>
+            <div class="back_top"><img src="img/上矢印.svg" alt="トップに戻る"></div>
 
         </section>
 
@@ -102,13 +100,13 @@
 
         <div class="footer_link">
             <div class="footer_link_a link01">
-                <a href="#"><p>▶︎Webデザイン科とは</p></a>
-                <a href="#"><p>▶︎一年授業</p></a>
+                <a href="content_intro.html"><p>▶︎Webデザイン科とは</p></a>
+                <a href="curricula_first.html"><p>▶︎一年授業</p></a>
                 <a href="https://www.jec.ac.jp/inquiry/"><p>▶︎お問い合わせ</p></a>
             </div>
             <div class="footer_link_a link02">
-                <a href="#"><p>▶︎心構え診断</p></a>
-                <a href="#"><p>▶︎二年授業</p></a>
+                <a href="test.html"><p>▶︎心構え診断</p></a>
+                <a href="curricula_second.html"><p>▶︎二年授業</p></a>
                 <a href="https://www.jec.ac.jp/request/"><p>▶︎資料取得</p></a>
             </div>
         </div>
