--- a/curricula_first.html
+++ b/curricula_first.html
@@ -50,7 +50,7 @@
             <li class="coding">
                 <h2>コーディング力</h2>
                 <ul class="class_01">
-                    <li class="title01"><h3>．HTML＆CSS</h3></li>
+                    <li class="title01"><h3>HTML＆CSS</h3></li>
                     <li class="01_content"><p>HTML（エイチティーエムエル、HyperText Markup Language）
                         は、ウェブページを作成するために開発された言語です。 現在、インターネット
                         上で公開されてるウェブページのほとんどは、HTMLで作成されています。
@@ -61,7 +61,7 @@
                     <li class="01_img"><img src="img/HTMLxCSS.png" alt="HTML & CSS LOGO"></li>
                 </ul>
                 <ul class="class_02">
-                    <li class="title02"><h3>．JavaScript実習</h3></li>
+                    <li class="title02"><h3>JavaScript実習</h3></li>
                     <li class="02_content"><p>JavaScriptとは、簡単に言えば、ウェブページにインタラクティブな機能や動的コンテンツを追加する、
                         人気のスクリプト言語です。よく知られているJavaScriptコンテンツの例としては、フォーム、フォトギャラリー、
                         画像スライドショー、アニメーションなどがあります。
@@ -74,7 +74,7 @@
                     <li class="02_img"><img src="img/JS.png" alt="JavaScript LOGO"></li>
                 </ul>
                 <ul class="class_03">
-                    <li class="title03"><h3>．Webアプリケーション制作</h3></li>
+                    <li class="title03"><h3>Webアプリケーション制作</h3></li>
                     <li class="03_content"><p>この授業では主にReactを用いてWebアプリケーションやデスクトップアプリケーションの作成方法を学習し、
                         同時にNode.jsやそのエコシステムの利用方法を学習することを目的とする。
 
@@ -88,7 +88,7 @@
             <li class="design">
                 <h2>デザイン力</h2>
                 <ul class="class_04">
-                    <li class="title04"><h3>．UI/UX実習</h3></li>
+                    <li class="title04"><h3>UI/UX実習</h3></li>
                     <li class="04_content"><p>UI（ユーザーインターフェース）とは、ホームページ内で閲覧する、
                         もしくは操作する要素のことです。
                         一方で、UI（ユーザーインターフェイス）とは、ユーザーとの間に現れるサービスやプロダクトの外観を表す言葉です。
@@ -100,7 +100,7 @@
                     <li class="04_img"><img src="img/UIUX.jpg" alt="UI/UX 説明"></li>
                 </ul>
                 <ul class="class_05">
-                    <li class="title05"><h3>．イラストレーション</h3></li>
+                    <li class="title05"><h3>イラストレーション</h3></li>
                     <li class="05_content"><p>基本的な描画・着彩表現の実践を通してイラストレーションの表現力を高めること、
                         Web制作における視覚伝達の基礎力を体得することを目的とする。
 
@@ -110,7 +110,7 @@
                     <li class="05_img"><img src="img/illustration.jpg" alt="イラスト講義"></li>
                 </ul>
                 <ul class="class_06">
-                    <li class="title06"><h3>．色彩演習</h3></li>
+                    <li class="title06"><h3>色彩演習</h3></li>
                     <li class="06_content"><p>色彩検定3級の合格を目指し、色彩の基礎知識を身につけながら、デザインに活かせる色彩力を高める。
 
                         授業で色を学ぶことができ......、学ぶことでセンスがよくなり、大いに利用することができます。
@@ -119,7 +119,7 @@
                     <li class="06_img"><img src="img/色彩01.png" alt="色彩演習イメージ"></li>
                 </ul>
                 <ul class="class_07">
-                    <li class="title07"><h3>．情報デザインI</h3></li>
+                    <li class="title07"><h3>情報デザインI</h3></li>
                     <li class="07_content"><p>人間中心設計、デザイン思考の考え方に基づき、ユーザー観察、ユーザー調査の手法、
                         ユーザーに提供する新しい価値についてのアイデア手法、ペルソナ・シナリオ手法、
                         ペーパープロトタイプよる評価手法などについて学ぶ。
@@ -129,7 +129,7 @@
                     <li class="07_img"><img src="img/人間中心設計01.png" alt="人間中心設計説明"></li>
                 </ul>
                 <ul class="class_08">
-                    <li class="title08"><h3>．サイト設計</h3></li>
+                    <li class="title08"><h3>サイト設計</h3></li>
                     <li class="08_content"><p>サイト設計における情報アーキテクチャの役割を理解した上で、
                         クライアントとユーザー双方のニーズを満たしたWebサイトの企画および設計を行えることを目的とする。
 
@@ -138,7 +138,7 @@
                     <li class="08_img"><img src="img/サイト設計01.jpg" alt="サイト設計説明"></li>
                 </ul>
                 <ul class="class_09">
-                    <li class="title09"><h3>．写真撮影/映像演出技法</h3></li>
+                    <li class="title09"><h3>写真撮影/映像演出技法</h3></li>
                     <li class="09_content"><p>カメラの基本原理を理解して目的応じた様々な場面での撮影方法を学習することを目的とする。
 
                         Web等に掲載する写真で物撮りや人物などを目的に応じて得たい写真を撮ることが出来る。 
@@ -152,7 +152,7 @@
             <li class="basic">
                 <h2>基礎力</h2>
                 <ul class="class_10">
-                    <li class="title10"><h3>．企画書作成/プレゼン</h3></li>
+                    <li class="title10"><h3>企画書作成/プレゼン</h3></li>
                     <li class="10_content"><p>自分が考えていることを整理し言葉でまとめる力を身に着け、論理的に構成しそれを相手に効果的に伝えるための手法を習得する。
 
                         企画書作成、プレゼンテーションの基本は依頼主にとっての「課題の発見」であり、「解決策の提案」であることを理解する。
@@ -160,7 +160,7 @@
                     <li class="10_img"><img src="img/企画書作成01.JPG" alt="企画書作成のイメージ"></li>
                 </ul>
                 <ul class="class_11">
-                    <li class="title11"><h3>．就職リテラシー</h3></li>
+                    <li class="title11"><h3>就職リテラシー</h3></li>
                     <li class="11_content"><p>就職試験における書類審査、面接等の準備を行い、自信を持って就職活動に取り組むことが出来ることを目的とする。
 
                         ワークショップ型演習授業形式にて、就職活動の際、企業の採用選考（書類選考、面接など）の対策を行うと共に、就職及び就職活動の意識付けを行う。
@@ -169,7 +169,7 @@
                     <li class="11_img"><img src="img/就職01.png" alt="面接のイメージ"></li>
                 </ul>
                 <ul class="class_12">
-                    <li class="title12"><h3>．チーム制作I</h3></li>
+                    <li class="title12"><h3>チーム制作I</h3></li>
                     <li class="12_content"><p>チーム制作において、チームワークには何が必要であるのか。その中におけるメンバーの位置づけはどうあるべきかについて学習することを目的とする。
 
                         チームワークについて、演習を通じた体験により深く理解し、体験演習の内容を振り返りながらまとめることができます。
@@ -178,7 +178,7 @@
                     <li class="12_img"><img src="img/チーム01.jpg" alt="チームワークのイメージ"></li>
                 </ul>
                 <ul class="class_13">
-                    <li class="title13"><h3>．Webデザイン技法</h3></li>
+                    <li class="title13"><h3>Webデザイン技法</h3></li>
                     <li class="13_content"><p>「ライティングスキルの習得」。Web業界のプロとして、また、
                         ビジネスパースンとして必要な言葉によるコミュケーション能力を身に付ける。
 
@@ -190,7 +190,7 @@
                     <li class="13_img"><img src="img/web技法01.png" alt="Webデザインのイメージ"></li>
                 </ul>
                 <ul class="class_14">
-                    <li class="title14"><h3>．進級制作</h3></li>
+                    <li class="title14"><h3>進級制作</h3></li>
                     <li class="14_content"><p>Web制作企業から実案件（クライアントの要求）を元に課題が掲示され、企画提案・Webサイト制作・
                         プレゼンテーションまでのWebワークフローを通して実務能力を学習し、企画・モックアップ、実装、
                         企業に向けて最終プレゼンテーションを行い、企業から指導を受けながらWebサイト制作を行い、
