20230710 except for test finish

--- a/content_intro.html
+++ b/content_intro.html
@@ -68,7 +68,7 @@
 
             <h1>科目紹介</h1>
                 <span class="block"></span>
-                <p>Webデザイン科は何を勉強しているのか？</p>
+                <h2>Webデザイン科は何を勉強しているのか？</h2>
 
                 <ul>
                     <li><a href="curricula_first.html">一年授業</a></li>
@@ -81,7 +81,7 @@
 
         <section class="content test_lead">
 
-            <p>Webデザイン科で学ぶための心構えを試してみよう！</p>
+            <h3>Webデザイン科で学ぶための心構えを試してみよう！</h3>
 
             <a href="test.html">心構え診断</a>
 
