--- a/content_intro.html
+++ b/content_intro.html
@@ -28,7 +28,7 @@
                     <li><a href="content_intro.html">Webデザイン科紹介</a></li>
                     <li><a href="curricula_first.html">一年授業</a></li>
                     <li><a href="curricula_second.html">二年授業</a></li>
-                    <li><a href="test.html">心構え診断</a></li>
+                    <li><a href="#" onclick="window.open('test.html', '心構え診断')">心構え診断</a></li>
                 </ul>
     
                 <ul class="menu_btn">
@@ -105,7 +105,7 @@
                 <a href="https://www.jec.ac.jp/inquiry/"><p>▶︎お問い合わせ</p></a>
             </div>
             <div class="footer_link_a link02">
-                <a href="test.html"><p>▶︎心構え診断</p></a>
+                <a href="#" onclick="window.open('test.html', '心構え診断')"><p>▶︎心構え診断</p></a>
                 <a href="curricula_second.html"><p>▶︎二年授業</p></a>
                 <a href="https://www.jec.ac.jp/request/"><p>▶︎資料取得</p></a>
             </div>
