--- a/test.html
+++ b/test.html
@@ -3,17 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Test</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js" integrity="sha512-3gJwYpMe3QewGELv8k/BX9vcqhryRdzRMxVfq6ngyWXwo03GFEzjsUm8Q7RZcHPHksttq7/GFoxjCVUjkjvPdw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="./JAVASCRIPT/test.js" defer></script>
+    <link rel="stylesheet" href="CSS/reset/reset.css">
+    <link rel="stylesheet" href="CSS/testCSS/test.css">    
+    <title>心構え診断｜心構えができる！｜日本電子専門学校</title>
 </head>
 <body>
-    <h1>Webデザイン科<br >心構え診断</h1>
-    <div>
-        <div class="quiz_title"></div>
-        <div class="quiz_content"></div>
-        <button class="yes">はい</button>
-        <button class="normal">わからない</button>
-        <button class="no">いいえ</button>
-    </div>
+    <section class="test_body">
+
+        <div class="frame">
+            <div class="container">
+                <div class="first_page">
+                    <h1>Webデザイン科<br>心構え診断</h1>
+                    <div class="block"></div>
+                    <div class="content_start">
+                        <div class="start_word"><p>この自己診断でWebデザイン科と自分の適応度をは測ってみよう！</p></div>
+                        <button class="start">スタート</button>
+                        <button class="back">戻る</button>
+                    </div>
+                </div>
+        
+                <div class="test">
+                    <h1>Webデザイン科<br>心構え診断</h1>
+                    <div class="block"></div>
+                    <div>
+                        <div class="quiz_title"></div>
+                        <div class="quiz_content"></div>
+                        <button class="yes">はい</button>
+                        <button class="normal">わからない</button>
+                        <button class="no">いいえ</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </section>
+    
 </body>
 </html>
