--- a/test.html
+++ b/test.html
@@ -20,25 +20,28 @@
                     <div class="content_start">
                         <div class="start_word"><p>この自己診断でWebデザイン科と自分の適応度をは測ってみよう！</p></div>
                         <button class="start">スタート</button>
-                        <button class="back">戻る</button>
-                    </div>
-                </div>
-        
-                <div class="test">
-                    <h1>Webデザイン科<br>心構え診断</h1>
-                    <div class="block"></div>
-                    <div>
-                        <div class="quiz_title"></div>
-                        <div class="quiz_content"></div>
-                        <button class="yes">はい</button>
-                        <button class="normal">わからない</button>
-                        <button class="no">いいえ</button>
+                        <button type="button" class="back" onclick="window.close()">戻る</button>
                     </div>
                 </div>
             </div>
         </div>
 
+        <div class="test">
+            <h1>Webデザイン科<br>心構え診断</h1>
+            <div class="block"></div>
+            <div class="test_content">
+                <div class="quiz_title"></div>
+                <div class="quiz_content"></div>
+                <div class="bgc_pic"></div>
+                <div class="bubble"></div>
+                <div class="button">
+                    <button class="yes">はい</button>
+                    <button class="normal">わからない</button>
+                    <button class="no">いいえ</button>
+                </div>
+            </div>
+        </div>
     </section>
-    
+
 </body>
 </html>
