20230711 Test base finished

--- a/test.html
+++ b/test.html
@@ -31,9 +31,9 @@
             <div class="block"></div>
             <div class="test_content">
                 <div class="quiz_title"></div>
-                <div class="quiz_content"></div>
+                
                 <div class="bgc_pic"></div>
-                <div class="bubble"></div>
+                <div class="bubble"><div class="quiz_content"></div></div>
                 <div class="button">
                     <button class="yes">はい</button>
                     <button class="normal">わからない</button>
