--- a/test.html
+++ b/test.html
@@ -41,6 +41,18 @@
                 </div>
             </div>
         </div>
+
+        <div class="score_page">
+            <h1>Webデザイン科<br>心構え診断</h1>
+            <div class="block"></div>
+            <div class="rank"></div>
+            <div class="commend"></div>
+            <div class="rank_btn">
+                <button class="top">TOP</button>
+                <button class="jec">日本電子専門学校</button>
+                <button class="hotpage">Webデザイン科HOT PAGE</button>
+            </div>
+        </div>
     </section>
 
 </body>
