--- a/test.html
+++ b/test.html
@@ -36,7 +36,7 @@
                 <div class="bubble"><div class="quiz_content"></div></div>
                 <div class="button">
                     <button class="yes">はい</button>
-                    <button class="normal">わからない</button>
+                    <button class="pass">わからない</button>
                     <button class="no">いいえ</button>
                 </div>
             </div>
@@ -50,10 +50,11 @@
             <div class="rank_btn">
                 <button class="top">TOP</button>
                 <button class="jec">日本電子専門学校</button>
+                <button class="get_doc">資料取得</button>
                 <button class="hotpage">Webデザイン科HOT PAGE</button>
             </div>
         </div>
     </section>
-
 </body>
+
 </html>
