--- a/content_intro.html
+++ b/content_intro.html
@@ -83,7 +83,7 @@
 
             <h3>Webデザイン科で学ぶための心構えを試してみよう！</h3>
 
-            <a href="test.html">心構え診断</a>
+            <a href="#" onclick="window.open('test.html', '心構え診断')">心構え診断</a>
 
             <p>あら、やっぱり準備をできてないかな。<br/>
                 日本電子専門学校をもっと知っていこうか。</p>
