--- a/test.html
+++ b/test.html
@@ -44,14 +44,13 @@
 
         <div class="score_page">
             <h1>Webデザイン科<br>心構え診断</h1>
-            <div class="block"></div>
             <div class="rank"></div>
             <div class="commend"></div>
             <div class="rank_btn">
-                <button class="top">TOP</button>
-                <button class="jec">日本電子専門学校</button>
-                <button class="get_doc">資料取得</button>
-                <button class="hotpage">Webデザイン科HOT PAGE</button>
+                <button class="top" type="button" name="Back To Top" onclick="location.href='index.html'">TOP</button>
+                <button class="jec"type="button" name="Jec Official Site" onclick="window.open('https://www.jec.ac.jp/', '日本電子専門学校')">日本電子専門学校</button>
+                <button class="get_doc" type="button" name="資料取得" onclick="window.open('https://www.jec.ac.jp/request/', '資料取得')">資料取得</button>
+                <button class="hotpage" type="button" name="資料取得" onclick="window.open('https://www.jec.ac.jp/request/', 'Webデザイン科HOT PAGE')">Webデザイン科HOT PAGE</button>
             </div>
         </div>
     </section>
