--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             <section class="intro_test test_intro_content"><h2>Webデザイン科で学ぶための適正を図ってみよう！</h2>
                 <p>Webデザイン科は面白そうだけど、自分は本当にこの学科を目指したいかな後悔するかな......</p>
     
-                <a href="#" onclick="window.open('test.html', '心構え診断')">心構え診断</a>
+                <a href="test.html" class="content_link test_link" onclick="window.open('test.html', '心構え診断')">心構え診断</a>
     
                 <p>プチ診断で確かめよう！！</p>
             </section>
