--- a/curricula_first.html
+++ b/curricula_first.html
@@ -76,8 +76,8 @@
                 </ul>
             </li>
             <li>
-                <h3>Webアプリケーション制作</h3>
-                <ul>
+                <h3 class="last">Webアプリケーション制作</h3>
+                <ul id="last">
                     <li><p>この授業では主にReactを用いてWebアプリケーションやデスクトップアプリケーションの作成方法を学習し、
                         同時にNode.jsやそのエコシステムの利用方法を学習することを目的とする。<br>
                         <br>
@@ -152,8 +152,8 @@
                 </ul>
             </li>
             <li>
-                <h3>写真撮影/映像演出技法</h3>
-                <ul>
+                <h3 class="last">写真撮影/映像演出技法</h3>
+                <ul id="last">
                     <li><p>カメラの基本原理を理解して目的応じた様々な場面での撮影方法を学習することを目的とする。<br>
                         <br>
                         Web等に掲載する写真で物撮りや人物などを目的に応じて得たい写真を撮ることが出来る。 
@@ -214,8 +214,8 @@
                 </ul>
             </li>
             <li>
-                <h3>進級制作</h3>
-                <ul>
+                <h3 class="last">進級制作</h3>
+                <ul id="last">
                     <li><p>Web制作企業から実案件（クライアントの要求）を元に課題が掲示され、企画提案・Webサイト制作・
                         プレゼンテーションまでのWebワークフローを通して実務能力を学習し、企画・モックアップ、実装、
                         企業に向けて最終プレゼンテーションを行い、企業から指導を受けながらWebサイト制作を行い、
