--- a/curricula_second.html
+++ b/curricula_second.html
@@ -80,8 +80,8 @@
                 </ul>
             </li>
             <li>
-                <h3>Webディレクション</h3>
-                <ul>
+                <h3 class="last">Webディレクション</h3>
+                <ul id="last">
                     <li><p>(1)要件定義<br>
                         (2)スケジュール管理<br>
                         (3)リソース管理<br>
@@ -122,8 +122,8 @@
                 </ul>
             </li>
             <li>
-                <h3>広告デザイン</h3>
-                <ul>
+                <h3 class="last">広告デザイン</h3>
+                <ul id="last">
                     <li><p>広告コミュニケーションの本質的な役割や価値を知り、Web制作の実務に活かせるコミュニケーションデザイン力を身に付ける。<br>
                         <br>
                         実務に就いた際、Webのみならずグラフィック、映像、イベントなども含めたトータルパッケージを企画立案出来る。</p></li>
@@ -182,8 +182,8 @@
                 </ul>
             </li>
             <li>
-                <h3>卒業制作</h3>
-                <ul>
+                <h3 class="last">卒業制作</h3>
+                <ul id="last">
                     <li><p>2年間の学習の中から得られた技術をベースに、
                         各自で研究課題を設定しクライアント獲得の営業をしながらサイト制作やアプリケーションなどの制作を行う。<br>
                         クライアントへのヒアリングからスケジュール管理、各種ドキュメント制作などディレクションができることを目的とする。<br>
