--- a/content_intro.html
+++ b/content_intro.html
@@ -52,11 +52,11 @@
                     ｢サイト構築｣などをトータルに学べる学科。</p>
                 <div class="img img01"><img src="img/学科01-fit.jpg" alt="関根先生は学生を指導している様子"></div>
 
-                <h2>大手Web関連企業に<br/>内定もらえる</h2>
+                <h2>大手Web関連企業に内定もらえる</h2>
                 <p>授業では企業がクライアント役となり、要望に応えるWebサイトを制作。</p>
                 <div class="img img02"><img src="img/学科02-fit.jpg" alt="学生のプレゼン写真"></div>
 
-                <h2>技能五輪国際大会に<br/>連続で出場</h2>
+                <h2>技能五輪国際大会に連続で出場</h2>
                 <p>プロの現場と同様の制作手法を通して実践的な技術を身につけます。
                     また、授業外で取り組むチームプロジェクトに参加することで、
                     より技術力を磨けます。</p>
