--- a/curricula_first.html
+++ b/curricula_first.html
@@ -48,7 +48,7 @@
         <h2>コーディング力</h2>
         <ul class="coding">
             <li>
-                <h3>HTML＆CSS</h3>
+                <h3>HTML＆CSS<span><img src="img/opencontent.svg" alt="open the class content"></span></h3>
                 <ul>
                     <li><p>HTML（エイチティーエムエル、HyperText Markup Language）
                         は、ウェブページを作成するために開発された言語です。 現在、インターネット
@@ -61,7 +61,7 @@
                 </ul>
             </li>
             <li>
-                <h3>JavaScript実習</h3>
+                <h3>JavaScript実習<span><img src="img/opencontent.svg" alt="open the class content"></span></h3>
                 <ul>
                     <li><p>JavaScriptとは、簡単に言えば、ウェブページにインタラクティブな機能や動的コンテンツを追加する、
                         人気のスクリプト言語です。よく知られているJavaScriptコンテンツの例としては、フォーム、フォトギャラリー、
@@ -76,7 +76,7 @@
                 </ul>
             </li>
             <li>
-                <h3 class="last">Webアプリケーション制作</h3>
+                <h3 class="last">Webアプリケーション制作<span><img src="img/opencontent.svg" alt="open the class content"></span></h3>
                 <ul id="last">
                     <li><p>この授業では主にReactを用いてWebアプリケーションやデスクトップアプリケーションの作成方法を学習し、
                         同時にNode.jsやそのエコシステムの利用方法を学習することを目的とする。<br>
@@ -92,7 +92,7 @@
         <h2>デザイン力</h2>
         <ul class="design">
             <li>
-                <h3>UI/UX実習</h3>
+                <h3>UI/UX実習<span><img src="img/opencontent.svg" alt="open the class content"></span></h3>
                 <ul>
                     <li><p>UI（ユーザーインターフェース）とは、ホームページ内で閲覧する、
                         もしくは操作する要素のことです。
@@ -106,7 +106,7 @@
                 </ul>
             </li>
             <li>
-                <h3>イラストレーション</h3>
+                <h3>イラストレーション<span><img src="img/opencontent.svg" alt="open the class content"></span></h3>
                 <ul>
                     <li><p>基本的な描画・着彩表現の実践を通してイラストレーションの表現力を高めること、
                         Web制作における視覚伝達の基礎力を体得することを目的とする。<br>
@@ -117,7 +117,7 @@
                 </ul>
             </li>
             <li>
-                <h3>色彩演習</h3>
+                <h3>色彩演習<span><img src="img/opencontent.svg" alt="open the class content"></span></h3>
                 <ul>
                     <li><p>色彩検定3級の合格を目指し、色彩の基礎知識を身につけながら、デザインに活かせる色彩力を高める。<br>
                         <br>
@@ -128,7 +128,7 @@
                 </ul>
             </li>
             <li>
-                <h3>情報デザインI</h3>
+                <h3>情報デザインI<span><img src="img/opencontent.svg" alt="open the class content"></span></h3>
                 <ul>
                     <li><p>人間中心設計、デザイン思考の考え方に基づき、ユーザー観察、ユーザー調査の手法、
                         ユーザーに提供する新しい価値についてのアイデア手法、ペルソナ・シナリオ手法、
@@ -141,7 +141,7 @@
                 </ul>
             </li>
             <li>
-                <h3>サイト設計</h3>
+                <h3>サイト設計<span><img src="img/opencontent.svg" alt="open the class content"></span></h3>
                 <ul>
                     <li><p>サイト設計における情報アーキテクチャの役割を理解した上で、
                         クライアントとユーザー双方のニーズを満たしたWebサイトの企画および設計を行えることを目的とする。<br>
@@ -152,7 +152,7 @@
                 </ul>
             </li>
             <li>
-                <h3 class="last">写真撮影/映像演出技法</h3>
+                <h3 class="last">写真撮影/映像演出技法<span><img src="img/opencontent.svg" alt="open the class content"></span></h3>
                 <ul id="last">
                     <li><p>カメラの基本原理を理解して目的応じた様々な場面での撮影方法を学習することを目的とする。<br>
                         <br>
@@ -168,7 +168,7 @@
         <h2>基礎力</h2>
         <ul class="basic">
             <li>
-                <h3>企画書作成/プレゼン</h3>
+                <h3>企画書作成/プレゼン<span><img src="img/opencontent.svg" alt="open the class content"></span></h3>
                 <ul>
                     <li><p>自分が考えていることを整理し言葉でまとめる力を身に着け、論理的に構成しそれを相手に効果的に伝えるための手法を習得する。<br>
                         <br>
@@ -178,7 +178,7 @@
                 </ul>
             </li>
             <li>
-                <h3>就職リテラシー</h3>
+                <h3>就職リテラシー<span><img src="img/opencontent.svg" alt="open the class content"></span></h3>
                 <ul>
                     <li><p>就職試験における書類審査、面接等の準備を行い、自信を持って就職活動に取り組むことが出来ることを目的とする。<br>
 
@@ -189,7 +189,7 @@
                 </ul>
             </li>
             <li>
-                <h3>チーム制作I</h3>
+                <h3>チーム制作I<span><img src="img/opencontent.svg" alt="open the class content"></span></h3>
                 <ul>
                     <li><p>チーム制作において、チームワークには何が必要であるのか。その中におけるメンバーの位置づけはどうあるべきかについて学習することを目的とする。<br>
                         <br>
@@ -200,7 +200,7 @@
                 </ul>
             </li>
             <li>
-                <h3>Webデザイン技法</h3>
+                <h3>Webデザイン技法<span><img src="img/opencontent.svg" alt="open the class content"></span></h3>
                 <ul>
                     <li><p>「ライティングスキルの習得」。Web業界のプロとして、また、
                         ビジネスパースンとして必要な言葉によるコミュケーション能力を身に付ける。<br>
@@ -214,7 +214,7 @@
                 </ul>
             </li>
             <li>
-                <h3 class="last">進級制作</h3>
+                <h3 class="last">進級制作<span><img src="img/opencontent.svg" alt="open the class content"></span></h3>
                 <ul id="last">
                     <li><p>Web制作企業から実案件（クライアントの要求）を元に課題が掲示され、企画提案・Webサイト制作・
                         プレゼンテーションまでのWebワークフローを通して実務能力を学習し、企画・モックアップ、実装、
