--- a/curricula_second.html
+++ b/curricula_second.html
@@ -48,7 +48,7 @@
         <h2>コーディング力</h2>
         <ul class="coding">
             <li>
-                <h3>サーバーサイドプログラミングI</h3>
+                <h3>サーバーサイドプログラミングI<span><img src="img/opencontent.svg" alt="open the class content"></span></h3>
                 <ul>
                     <li><p>高度なWebサイトを構築するためのサーバサイドスクリプティング言語PHPと共に、データベース技術を学習することを目的とする。<br>
                         <br>
@@ -59,7 +59,7 @@
                 </ul>
             </li>
             <li>
-                <h3>サーバーサイドプログラミングII</h3>
+                <h3>サーバーサイドプログラミングII<span><img src="img/opencontent.svg" alt="open the class content"></span></h3>
                 <ul>
                     <li><p>高度なWebサイトを構築するためのサーバサイドスクリプティング言語PHPと共に、データベース技術を学習することを目的とする。<br>
                         <br>
@@ -70,7 +70,7 @@
                 </ul>
             </li>
             <li>
-                <h3>Webアプリケーション制作II</h3>
+                <h3>Webアプリケーション制作II<span><img src="img/opencontent.svg" alt="open the class content"></span></h3>
                 <ul>
                     <li><p>主にフロントエンドの技術を用いてWebアプリやスマートフォンアプリの開発をする。<br>
                         Reactを用いたSPA、コンポーネントによるUIの構築 、Firebase等のmBaasとの連携、Githubによるバージョン管理等を習得することを目的とする。<br>
@@ -80,7 +80,7 @@
                 </ul>
             </li>
             <li>
-                <h3 class="last">Webディレクション</h3>
+                <h3 class="last">Webディレクション<span><img src="img/opencontent.svg" alt="open the class content"></span></h3>
                 <ul id="last">
                     <li><p>(1)要件定義<br>
                         (2)スケジュール管理<br>
@@ -99,7 +99,7 @@
         <h2>デザイン力</h2>
         <ul class="design">
             <li>
-                <h3>Webライティング技法</h3>
+                <h3>Webライティング技法<span><img src="img/opencontent.svg" alt="open the class content"></span></h3>
                 <ul>
                     <li><p>「ライティングスキルの習得」。Web業界のプロとして、また、
                         ビジネスパースンとして必要な言葉によるコミュケーション能力を身に付ける。<br>
@@ -111,7 +111,7 @@
                 </ul>
             </li>
             <li>
-                <h3>情報デザインII</h3>
+                <h3>情報デザインII<span><img src="img/opencontent.svg" alt="open the class content"></span></h3>
                 <ul>
                     <li><p>授業の前半では「情報デザイン試験」の資格取得を目指し試験対策講座を行う。後半では、<br>
                         １.わかりやすい情報の伝達表現<br>
@@ -122,7 +122,7 @@
                 </ul>
             </li>
             <li>
-                <h3 class="last">広告デザイン</h3>
+                <h3 class="last">広告デザイン<span><img src="img/opencontent.svg" alt="open the class content"></span></h3>
                 <ul id="last">
                     <li><p>広告コミュニケーションの本質的な役割や価値を知り、Web制作の実務に活かせるコミュニケーションデザイン力を身に付ける。<br>
                         <br>
@@ -137,7 +137,7 @@
         <h2>基礎力</h2>
         <ul class="basic">
             <li>
-                <h3>ユーザービリティ＆アクセシビリティ</h3>
+                <h3>ユーザービリティ＆アクセシビリティ<span><img src="img/opencontent.svg" alt="open the class content"></span></h3>
                 <ul>
                     <li><p>Web業界の仕事の進め方に沿ってチーム制作で学習し、Web制作におけるユーザビリティ、
                         アクセシビリティ観点から既存サイトの問題点を洗い出し、改善提案を学習する、
@@ -150,7 +150,7 @@
                 </ul>
             </li>
             <li>
-                <h3>サービス運用</h3>
+                <h3>サービス運用<span><img src="img/opencontent.svg" alt="open the class content"></span></h3>
                 <ul>
                     <li><p>Webサービスとはインターネット上で提供されるサービス全般を指す言葉です。<br>
                         <br>
@@ -161,7 +161,7 @@
                 </ul>
             </li>
             <li>
-                <h3>Webマーケティング</h3>
+                <h3>Webマーケティング<span><img src="img/opencontent.svg" alt="open the class content"></span></h3>
                 <ul>
                     <li><p>モノを売るための仕組みである「マーケティング」の基本と実際を正しく理解することにより、
                         Webページ依頼主の要望に的確に対応出来るなど、実務に活かせる知識や考え方を身に着ける。<br>
@@ -172,7 +172,7 @@
                 </ul>
             </li>
             <li>
-                <h3>関連法規</h3>
+                <h3>関連法規<span><img src="img/opencontent.svg" alt="open the class content"></span></h3>
                 <ul>
                     <li><p>知的財産権、実務における契約行為の基本的な考え方を理解することを目的とする。<br>
                         <br>
@@ -182,7 +182,7 @@
                 </ul>
             </li>
             <li>
-                <h3 class="last">卒業制作</h3>
+                <h3 class="last">卒業制作<span><img src="img/opencontent.svg" alt="open the class content"></span></h3>
                 <ul id="last">
                     <li><p>2年間の学習の中から得られた技術をベースに、
                         各自で研究課題を設定しクライアント獲得の営業をしながらサイト制作やアプリケーションなどの制作を行う。<br>
