--- a/curricula_first.html
+++ b/curricula_first.html
@@ -47,7 +47,7 @@
     <section class="content coding_body">
         <h2>コーディング力</h2>
         <ul class="coding">
-            <li>
+            <li class="container_of_class">
                 <h3>HTML＆CSS<span><img src="img/opencontent.svg" alt="open the class content"></span></h3>
                 <ul>
                     <li><p>HTML（エイチティーエムエル、HyperText Markup Language）
@@ -60,7 +60,7 @@
                     <li><img src="img/HTMLxCSS.png" alt="HTML and CSS LOGO"></li>
                 </ul>
             </li>
-            <li>
+            <li class="container_of_class">
                 <h3>JavaScript実習<span><img src="img/opencontent.svg" alt="open the class content"></span></h3>
                 <ul>
                     <li><p>JavaScriptとは、簡単に言えば、ウェブページにインタラクティブな機能や動的コンテンツを追加する、
@@ -75,7 +75,7 @@
                     <li><img src="img/JS.png" alt="JAVESCRIPT LOGO"></li>
                 </ul>
             </li>
-            <li>
+            <li class="container_of_class">
                 <h3 class="last">Webアプリケーション制作<span><img src="img/opencontent.svg" alt="open the class content"></span></h3>
                 <ul id="last">
                     <li><p>この授業では主にReactを用いてWebアプリケーションやデスクトップアプリケーションの作成方法を学習し、
@@ -91,7 +91,7 @@
     <section class="content design_body">
         <h2>デザイン力</h2>
         <ul class="design">
-            <li>
+            <li class="container_of_class">
                 <h3>UI/UX実習<span><img src="img/opencontent.svg" alt="open the class content"></span></h3>
                 <ul>
                     <li><p>UI（ユーザーインターフェース）とは、ホームページ内で閲覧する、
@@ -105,7 +105,7 @@
                     <li><img src="img/UIUX.jpg" alt="UI/UX 説明"></li>
                 </ul>
             </li>
-            <li>
+            <li class="container_of_class">
                 <h3>イラストレーション<span><img src="img/opencontent.svg" alt="open the class content"></span></h3>
                 <ul>
                     <li><p>基本的な描画・着彩表現の実践を通してイラストレーションの表現力を高めること、
@@ -116,7 +116,7 @@
                     <li><img src="img/illustration.jpg" alt="イラストの授業講義"></li>
                 </ul>
             </li>
-            <li>
+            <li class="container_of_class">
                 <h3>色彩演習<span><img src="img/opencontent.svg" alt="open the class content"></span></h3>
                 <ul>
                     <li><p>色彩検定3級の合格を目指し、色彩の基礎知識を身につけながら、デザインに活かせる色彩力を高める。<br>
@@ -127,7 +127,7 @@
                     <li><img src="img/色彩01.png" alt="色彩のイメージ"></li>
                 </ul>
             </li>
-            <li>
+            <li class="container_of_class">
                 <h3>情報デザインI<span><img src="img/opencontent.svg" alt="open the class content"></span></h3>
                 <ul>
                     <li><p>人間中心設計、デザイン思考の考え方に基づき、ユーザー観察、ユーザー調査の手法、
@@ -140,7 +140,7 @@
                     <li><img src="img/人間中心設計01.png" alt="人間中心設計のイメージ"></li>
                 </ul>
             </li>
-            <li>
+            <li class="container_of_class">
                 <h3>サイト設計<span><img src="img/opencontent.svg" alt="open the class content"></span></h3>
                 <ul>
                     <li><p>サイト設計における情報アーキテクチャの役割を理解した上で、
@@ -151,7 +151,7 @@
                     <li><img src="img/サイト設計01.jpg" alt="サイト設計のイメージ"></li>
                 </ul>
             </li>
-            <li>
+            <li class="container_of_class">
                 <h3 class="last">写真撮影/映像演出技法<span><img src="img/opencontent.svg" alt="open the class content"></span></h3>
                 <ul id="last">
                     <li><p>カメラの基本原理を理解して目的応じた様々な場面での撮影方法を学習することを目的とする。<br>
@@ -167,7 +167,7 @@
     <section class="content basic_body">
         <h2>基礎力</h2>
         <ul class="basic">
-            <li>
+            <li class="container_of_class">
                 <h3>企画書作成/プレゼン<span><img src="img/opencontent.svg" alt="open the class content"></span></h3>
                 <ul>
                     <li><p>自分が考えていることを整理し言葉でまとめる力を身に着け、論理的に構成しそれを相手に効果的に伝えるための手法を習得する。<br>
@@ -177,7 +177,7 @@
                     <li><img src="img/企画書作成01.JPG" alt="企画書作成の流れ"></li>
                 </ul>
             </li>
-            <li>
+            <li class="container_of_class">
                 <h3>就職リテラシー<span><img src="img/opencontent.svg" alt="open the class content"></span></h3>
                 <ul>
                     <li><p>就職試験における書類審査、面接等の準備を行い、自信を持って就職活動に取り組むことが出来ることを目的とする。<br>
@@ -188,7 +188,7 @@
                     <li><img src="img/就職01.png" alt="面接のイメージ"></li>
                 </ul>
             </li>
-            <li>
+            <li class="container_of_class">
                 <h3>チーム制作I<span><img src="img/opencontent.svg" alt="open the class content"></span></h3>
                 <ul>
                     <li><p>チーム制作において、チームワークには何が必要であるのか。その中におけるメンバーの位置づけはどうあるべきかについて学習することを目的とする。<br>
@@ -199,7 +199,7 @@
                     <li><img src="img/チーム01.jpg" alt="チームワークのイメージ"></li>
                 </ul>
             </li>
-            <li>
+            <li class="container_of_class">
                 <h3>Webデザイン技法<span><img src="img/opencontent.svg" alt="open the class content"></span></h3>
                 <ul>
                     <li><p>「ライティングスキルの習得」。Web業界のプロとして、また、
@@ -213,7 +213,7 @@
                     <li><img src="img/web技法01.png" alt="Webの構成説明"></li>
                 </ul>
             </li>
-            <li>
+            <li class="container_of_class">
                 <h3 class="last">進級制作<span><img src="img/opencontent.svg" alt="open the class content"></span></h3>
                 <ul id="last">
                     <li><p>Web制作企業から実案件（クライアントの要求）を元に課題が掲示され、企画提案・Webサイト制作・
