--- a/curricula_second.html
+++ b/curricula_second.html
@@ -47,7 +47,7 @@
     <section class="content coding_body">
         <h2>コーディング力</h2>
         <ul class="coding">
-            <li>
+            <li class="container_of_class">
                 <h3>サーバーサイドプログラミングI<span><img src="img/opencontent.svg" alt="open the class content"></span></h3>
                 <ul>
                     <li><p>高度なWebサイトを構築するためのサーバサイドスクリプティング言語PHPと共に、データベース技術を学習することを目的とする。<br>
@@ -58,7 +58,7 @@
                     <li><img src="img/PHP01.jpg" alt="PHPの画像"></li>
                 </ul>
             </li>
-            <li>
+            <li class="container_of_class">
                 <h3>サーバーサイドプログラミングII<span><img src="img/opencontent.svg" alt="open the class content"></span></h3>
                 <ul>
                     <li><p>高度なWebサイトを構築するためのサーバサイドスクリプティング言語PHPと共に、データベース技術を学習することを目的とする。<br>
@@ -69,7 +69,7 @@
                     <li><img src="img/wordpress01.jpg" alt="wordpressのLOGO"></li>
                 </ul>
             </li>
-            <li>
+            <li class="container_of_class">
                 <h3>Webアプリケーション制作II<span><img src="img/opencontent.svg" alt="open the class content"></span></h3>
                 <ul>
                     <li><p>主にフロントエンドの技術を用いてWebアプリやスマートフォンアプリの開発をする。<br>
@@ -79,7 +79,7 @@
                     <li><img src="img/github01.JPG" alt="Github LOGO"></li>
                 </ul>
             </li>
-            <li>
+            <li class="container_of_class">
                 <h3 class="last">Webディレクション<span><img src="img/opencontent.svg" alt="open the class content"></span></h3>
                 <ul id="last">
                     <li><p>(1)要件定義<br>
@@ -98,7 +98,7 @@
     <section class="content design_body">
         <h2>デザイン力</h2>
         <ul class="design">
-            <li>
+            <li class="container_of_class">
                 <h3>Webライティング技法<span><img src="img/opencontent.svg" alt="open the class content"></span></h3>
                 <ul>
                     <li><p>「ライティングスキルの習得」。Web業界のプロとして、また、
@@ -110,7 +110,7 @@
                     <li><img src="img/webwriting01.jpg" alt="webwriting のイメージ"></li>
                 </ul>
             </li>
-            <li>
+            <li class="container_of_class">
                 <h3>情報デザインII<span><img src="img/opencontent.svg" alt="open the class content"></span></h3>
                 <ul>
                     <li><p>授業の前半では「情報デザイン試験」の資格取得を目指し試験対策講座を行う。後半では、<br>
@@ -121,7 +121,7 @@
                     <li><img src="img/人間中心設計01.png" alt="人間中心設計のイメージ"></li>
                 </ul>
             </li>
-            <li>
+            <li class="container_of_class">
                 <h3 class="last">広告デザイン<span><img src="img/opencontent.svg" alt="open the class content"></span></h3>
                 <ul id="last">
                     <li><p>広告コミュニケーションの本質的な役割や価値を知り、Web制作の実務に活かせるコミュニケーションデザイン力を身に付ける。<br>
@@ -136,7 +136,7 @@
     <section class="content basic_body">
         <h2>基礎力</h2>
         <ul class="basic">
-            <li>
+            <li class="container_of_class">
                 <h3>ユーザービリティ＆アクセシビリティ<span><img src="img/opencontent.svg" alt="open the class content"></span></h3>
                 <ul>
                     <li><p>Web業界の仕事の進め方に沿ってチーム制作で学習し、Web制作におけるユーザビリティ、
@@ -149,7 +149,7 @@
                     <li><img src="img/user01.jpg" alt="スマホ使う用数"></li>
                 </ul>
             </li>
-            <li>
+            <li class="container_of_class">
                 <h3>サービス運用<span><img src="img/opencontent.svg" alt="open the class content"></span></h3>
                 <ul>
                     <li><p>Webサービスとはインターネット上で提供されるサービス全般を指す言葉です。<br>
@@ -160,7 +160,7 @@
                     <li><img src="img/webserver01.jpg" alt="web workers"></li>
                 </ul>
             </li>
-            <li>
+            <li class="container_of_class">
                 <h3>Webマーケティング<span><img src="img/opencontent.svg" alt="open the class content"></span></h3>
                 <ul>
                     <li><p>モノを売るための仕組みである「マーケティング」の基本と実際を正しく理解することにより、
@@ -171,7 +171,7 @@
                     <li><img src="img/marketing01.jpg" alt="marketing planing"></li>
                 </ul>
             </li>
-            <li>
+            <li class="container_of_class">
                 <h3>関連法規<span><img src="img/opencontent.svg" alt="open the class content"></span></h3>
                 <ul>
                     <li><p>知的財産権、実務における契約行為の基本的な考え方を理解することを目的とする。<br>
@@ -181,7 +181,7 @@
                     <li><img src="img/law01.jpg" alt="law and the hammer"></li>
                 </ul>
             </li>
-            <li>
+            <li class="container_of_class">
                 <h3 class="last">卒業制作<span><img src="img/opencontent.svg" alt="open the class content"></span></h3>
                 <ul id="last">
                     <li><p>2年間の学習の中から得られた技術をベースに、
