--- a/content_intro.html
+++ b/content_intro.html
@@ -47,20 +47,27 @@
 
             <h1>Webデザイン科とは？</h1>
                 <span class="block"></span>
-                <h2>企業連携で仕事を体験</h2>
-                <p>WebデザイナーやWebディレクターに必要な ｢企画立案｣｢プレゼンテーション｣｢デザイン制作｣
+
+                <div class="what what01">
+                    <h2>企業連携で仕事を体験</h2>
+                    <p>WebデザイナーやWebディレクターに必要な ｢企画立案｣｢プレゼンテーション｣｢デザイン制作｣
                     ｢サイト構築｣などをトータルに学べる学科。</p>
-                <div class="img img01"><img src="img/学科01-fit.jpg" alt="関根先生は学生を指導している様子"></div>
+                    <div class="img img01"><img src="img/学科01-fit.jpg" alt="関根先生は学生を指導している様子"></div>
+                </div>
 
-                <h2>大手Web関連企業に内定もらえる</h2>
-                <p>授業では企業がクライアント役となり、要望に応えるWebサイトを制作。</p>
-                <div class="img img02"><img src="img/学科02-fit.jpg" alt="学生のプレゼン写真"></div>
+                <div class="what what02">
+                    <h2>大手Web関連企業に内定もらえる</h2>
+                    <p>授業では企業がクライアント役となり、要望に応えるWebサイトを制作。</p>
+                    <div class="img img02"><img src="img/学科02-fit.jpg" alt="学生のプレゼン写真"></div>
+                </div>
 
-                <h2>技能五輪国際大会に連続で出場</h2>
-                <p>プロの現場と同様の制作手法を通して実践的な技術を身につけます。
+                <div class="what what03">
+                    <h2>技能五輪国際大会に連続で出場</h2>
+                    <p>プロの現場と同様の制作手法を通して実践的な技術を身につけます。
                     また、授業外で取り組むチームプロジェクトに参加することで、
                     より技術力を磨けます。</p>
-                <div class="img img03"><img src="img/学科03-fit.jpg" alt="学生の受賞の様子"></div>
+                    <div class="img img03"><img src="img/学科03-fit.jpg" alt="学生の受賞の様子"></div>
+                </div>
 
         </section>
 
