--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="CSS/TopCSS/index.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js" integrity="sha512-3gJwYpMe3QewGELv8k/BX9vcqhryRdzRMxVfq6ngyWXwo03GFEzjsUm8Q7RZcHPHksttq7/GFoxjCVUjkjvPdw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="JAVASCRIPT/index.js" defer></script>
+    <link rel="icon" type="image/svg" href="img/学科LOGO-04.svg">
     <title>TOP｜心構えができる！｜日本電子専門学校</title>
 </head>
 <body>
