--- a/test.html
+++ b/test.html
@@ -50,7 +50,7 @@
             <div class="rank_btn">
                 <button class="top" type="button" name="Back To Top" onclick="location.href='index.html'">TOP</button>
                 <button class="jec"type="button" name="Jec Official Site" onclick="window.open('https://www.jec.ac.jp/', '日本電子専門学校')">日本電子専門学校</button>
-                <button class="get_doc" type="button" name="資料取得" onclick="window.open('https://www.jec.ac.jp/request/', '資料取得')">資料を取り寄せる</button>
+                <button class="get_doc" type="button" name="資料取得" onclick="window.open('https://www.jec.ac.jp/request/', '資料請求')">資料請求</button>
                 <button class="hotpage" type="button" name="Webデザイン科HOT PAGE" onclick="window.open('https://www.jec.ac.jp/request/', 'Webデザイン科HOT PAGE')">Webデザイン科HOT PAGE</button>
             </div>
         </div>
