--- a/content_intro.html
+++ b/content_intro.html
@@ -93,8 +93,7 @@
 
             <a href="#" onclick="window.open('test.html', '心構え診断')">心構え診断</a>
 
-            <p>あら、やっぱり準備をできてないかな。<br/>
-                日本電子専門学校をもっと知っていこうか。</p>
+            <p>あら、やっぱり準備をできてないかな。<br>日本電子専門学校をもっと知っていこうか。</p>
 
             <a href="https://www.jec.ac.jp/">日本電子専門学校</a>
 
