--- a/curricula_first.html
+++ b/curricula_first.html
@@ -78,7 +78,7 @@
             </li>
             <li class="container_of_class">
                 <h3 class="last">Webアプリケーション制作<span><img src="img/opencontent.svg" alt="open the class content"></span></h3>
-                <ul id="last">
+                <ul id="last01">
                     <li><p>この授業では主にReactを用いてWebアプリケーションやデスクトップアプリケーションの作成方法を学習し、
                         同時にNode.jsやそのエコシステムの利用方法を学習することを目的とする。<br>
                         <br>
@@ -154,7 +154,7 @@
             </li>
             <li class="container_of_class">
                 <h3 class="last">写真撮影/映像演出技法<span><img src="img/opencontent.svg" alt="open the class content"></span></h3>
-                <ul id="last">
+                <ul id="last02">
                     <li><p>カメラの基本原理を理解して目的応じた様々な場面での撮影方法を学習することを目的とする。<br>
                         <br>
                         Web等に掲載する写真で物撮りや人物などを目的に応じて得たい写真を撮ることが出来る。 
