--- a/curricula_second.html
+++ b/curricula_second.html
@@ -82,7 +82,7 @@
             </li>
             <li class="container_of_class">
                 <h3 class="last">Webディレクション<span><img src="img/opencontent.svg" alt="open the class content"></span></h3>
-                <ul id="last">
+                <ul id="last01">
                     <li><p>(1)要件定義<br>
                         (2)スケジュール管理<br>
                         (3)リソース管理<br>
@@ -90,7 +90,7 @@
                         (5)運用管理などの役割と必要な技術を理解し、各ドキュメントの作成が出来る。<br>
                         <br>
                         Webディレクターの役割と必要な技術を理解し、Webディレクターとして、実際の業務に活用出来る知識と技術を理解出来る</p></li>
-                    <li><img src="img/director web01.jpg" alt="directing のイメージ"></li>
+                    <li><img src="img/director-web01.jpg" alt="directing のイメージ"></li>
                 </ul>
             </li>
         </ul>
@@ -124,7 +124,7 @@
             </li>
             <li class="container_of_class">
                 <h3 class="last">広告デザイン<span><img src="img/opencontent.svg" alt="open the class content"></span></h3>
-                <ul id="last">
+                <ul id="last02">
                     <li><p>広告コミュニケーションの本質的な役割や価値を知り、Web制作の実務に活かせるコミュニケーションデザイン力を身に付ける。<br>
                         <br>
                         実務に就いた際、Webのみならずグラフィック、映像、イベントなども含めたトータルパッケージを企画立案出来る。</p></li>
