--- a/test.html
+++ b/test.html
@@ -19,7 +19,7 @@
                     <h1>Webデザイン科<br>心構え診断</h1>
                     <div class="block"></div>
                     <div class="content_start">
-                        <div class="start_word"><p>この自己診断でWebデザイン科と自分の適応度をは測ってみよう！</p></div>
+                        <div class="start_word"><p>この自己診断でWebデザイン科と自分の適応度をは測ってみよう！<br><span class="all_question">ー全20問ー</span></p></div>
                         <button class="start">スタート</button>
                         <button type="button" class="back" onclick="window.close()">戻る</button>
                     </div>
