--- a/test.html
+++ b/test.html
@@ -30,6 +30,7 @@
         <div class="test">
             <h1>Webデザイン科<br>心構え診断</h1>
             <div class="block"></div>
+            <p class="counter">1/20</p>
             <div class="test_content">
                 <div class="quiz_title"></div>
                 
